# Estate-Manager

./: .dockerignore  .env.example  .env.local  .gitignore  Dockerfile  LICENSE  docker-compose.yml  pyproject.toml  req.txt  reset_migrations.py
AssetManager/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
AssetManager/migrations/: 0001_initial.py  0002_alter_asset_description_alter_debt_description.py  0002_alter_asset_user_alter_debt_user.py  0002_asset_title_debt_title.py  0002_remove_doc_url_doc_file.py  0003_alter_debt_description.py  0003_merge_20241116_1745.py  0004_doctype_doc.py  0005_delete_doc_delete_doctype.py  0006_doctype_doc.py
Base/: middleware.py  models.py  system_stats_middleware.py  urls.py  views.py
Base/migrations/: 0001_initial.py
CheckList/: admin.py  apps.py  forms.py  helper.py  models.py  urls.py  views.py
CheckList/migrations/: 0001_initial.py  0002_checklistitemstatus.py  0002_checklistitemstatus_user.py  0003_remove_checklistcategory_items_and_more.py  0003_rename_titles_checklistitem_title_and_more.py  0004_alter_checklistitem_cardinality.py  0005_checklistitem_titles.py  0006_remove_checklistitem_titles.py  0007_alter_checklistitemstatus_status.py  0008_cataloguedata_cataloguesubtype_cataloguetype_doctype_and_more.py  0008_doctype_doc.py  0009_customuser.py  (+5 more)
ContactManager/: admin.py  forms.py  models.py  urls.py  views.py
Estate/: asgi.py  settings.py  urls.py  wsgi.py
UserManagement/: admin.py  decorators.py  forms.py  helper.py  models.py  urls.py  views.py
static/css/: reg.css  (+1 more)
templates/: base.html
(+42 files in other folders)
