[tool.poetry]
name = "estatemanagement"
version = "0.1.0"
description = ""
authors = ["KeaganGilmore <keagangilmore@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
mysqlclient = "^2.2.5"
python-dotenv = "^1.0.1"
django-otp = "^1.5.4"
sqlparse = "^0.5.1"
asgiref = "^3.8.1"
tzdata = "^2024.2"
faker = "^30.8.2"
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
